# yt-transcript-mcp

./: LICENSE  pyproject.toml
config/: mcp-docker.json  mcp.json
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: README.md
scripts/: build_docker.py  run_tests.py
src/: __init__.py  youtube_transcript_mcp_server.py
tests/: __init__.py  test_server.py
~/.cursor/: mcp.json
